Struktur - erste Vorlesung

--- a/Zusammenfassung_Statistik.tex
+++ b/Zusammenfassung_Statistik.tex
@@ -42,9 +42,55 @@
 \maketitle
 \tableofcontents
 \newpage
-\section{Statistik Zusammenfassung alles hier rein}
-SAMPLE TEXT 
-\section{Statistik Grundlagen}
-\subsection{Erste Vorlesung}
+\section{Statistik Grundlagen und Definitionen}
+\subsection{Arithmetischer Mittelwert}
 text
+
+\subsection{Grundbegriffe}
+\subsubsection{Grundgesamtheit}
+text
+
+\subsubsection{Stichprobe}
+text
+
+\subsubsection{Stichprobenumfang}
+text
+
+\subsubsection{Merkmal}
+text
+
+\subsubsection{Ausprägung}
+text
+
+\subsection{Qualitativ und Quantitativ}
+text
+
+\subsection{Diskret und Stetig}
+text
+
+\subsection{Skalierung von Merkmalen}
+\subsubsection{nominal}
+text
+
+\subsubsection{ordinal}
+text
+
+\subsubsection{kardinal}
+text
+
+\subsection{Häufigkeit}
+text
+
+\subsection{relative Häufigkeit}
+text
+
+\subsection{Häufigkeitsverteilung}
+text
+
+\subsection{Verteiung der relativen Häufigkeiten}
+text
+
+\subsection{Empirische Verteilungsfunktion}
+text
+
 \end{document}
