Vorlesung 1 komplett implementiert

--- a/Zusammenfassung_Statistik.tex
+++ b/Zusammenfassung_Statistik.tex
@@ -44,53 +44,70 @@
 \newpage
 \section{Statistik Grundlagen und Definitionen}
 \subsection{Arithmetischer Mittelwert}
-text
+Der Arithmetische Mittelwert ist der \glqq normale\grqq{} Durchschnitt. Also addiert man alle Werte auf und teilt durch die Anzahl der Werte. Beispiel:\\
+\begin{equation}
+	\frac{1 + 2 + 2 + 1 + 4}{5} = 2
+\end{equation}
 
 \subsection{Grundbegriffe}
 \subsubsection{Grundgesamtheit}
-text
+Beschreibt die Menge gleicherartiger Objekte (z.B. Mietwohnungen).
 
 \subsubsection{Stichprobe}
-text
+Beschreibt die Menge der untersuchten Objekte (z.B. Mietwohnungen in Stuttgart).
 
 \subsubsection{Stichprobenumfang}
-text
+Beschreibt die Anzahl der untersuchten Objekte (z.B. 120 Mietwohnungen in Stuttgart).
 
 \subsubsection{Merkmal}
-text
+Beschreibt ein Kriterium oder eine interessierende Größe (z.B. Anzahl der Zimmer).
 
 \subsubsection{Ausprägung}
-text
+Beschreibt die Werte, die ein Merkmal annehmen kann (z.B. 1 Zimmer, 2 Zimmer, 4 Zimmer, \dots).
 
 \subsection{Qualitativ und Quantitativ}
-text
+\subsubsection{Qualitativ}
+Merkmale heißen qualitativ, wenn sie nur ihrer \textcolor{blue}{Art} nach unterschieden werden können.
+
+\subsubsection{Quantitativ}
+Merkmale heißen quantitativ, wenn sie nur ihrer \textcolor{blue}{Größe} unterscheidbar sind.
 
 \subsection{Diskret und Stetig}
-text
+\subsubsection{Diskret}
+Merkmale heißen diskret, wenn sie \textcolor{blue}{abzählbar} sind.
+
+\subsubsection{Stetig}
+Merkmale heißen stetig, wenn sie \textcolor{blue}{jeden Wert innerhalb eines Intervalls} annehmen können.
 
 \subsection{Skalierung von Merkmalen}
 \subsubsection{nominal}
-text
+Die Skalierung von Merkmalen heißt nominal, wenn sie in verschiedener Reihenfolge aufgelistet werden können (z.B. Augenfarbe).
 
 \subsubsection{ordinal}
-text
+Die Skalierung von Merkmalen heißt ordinal, wenn sie in auf- oder absteigender Reihenfolge aufgezählt werden kann (z.B. Wohnungsgröße).
 
 \subsubsection{kardinal}
-text
+Die Skalierung von Merkmalen heißt kardinal, wenn bei auf- oder absteigender Reihenfolge Abstände definiert werden können (z.B. Geschosshöhe).
 
 \subsection{Häufigkeit}
-text
+Die Häufigkeit $h_i$ ist die Anzahl der jeweils $i$-ten Ausprägung eines untersuchten Merkmals/Ereignisses. Beispiel:\\
+Wenn es bei einem Experiment 11 Proband*innen gibt und 3 davon die Haarfarbe braun haben, ist die Häufigkeit der Haarfarbe braun 3. Die Häufigkeit aller Haarfarben kombiniert wäre dann 11.
 
 \subsection{relative Häufigkeit}
-text
+Die relative Häufigkeit $f_i$ ist die normale Häufigkeit im Verhältnis zur Gesamtanzahl. Also im o.g. Beispiel:\\
+Die relative Häufigkeit der Haarfarbe braun $f_{braun} = \frac{3}{11}$.
 
 \subsection{Häufigkeitsverteilung}
-text
+Eine Häufigkeit $h_i$ ist die Anzahl von Ausprägungen (oder Ereignissen), also $\geq 1$. Eine Häufigkeitsverteilung ist die Darstellung (=Zusammenschau) der Häufigkeiten aller möglichen Ereignissen. Also ein Diagramm oder eine Auflistung aller Häufigkeiten zur Übersicht ihrer Verteilungen zu einander. 
 
 \subsection{Verteiung der relativen Häufigkeiten}
-text
+Die Verteilung der relativen Häufigkeit ist die Zusammenschau der relativen Häufigkeiten $f_i = \frac{h_i}{n}$ ($n$ = Stichprobenumfang und $h_i$ = Häufigkeiten) von sämtlichen möglichen Ereignissen (analog zur Häufigkeitsverteilung).
 
 \subsection{Empirische Verteilungsfunktion}
-text
+Die Empirische Verteilungsfunktion ist die Funktion der kumulierten relativen Häufigkeiten. Beispiel:\\
+\begin{equation}
+	F(x) = \sum_{i}^{} f_i  
+\end{equation}
+\includegraphics[width=\textwidth]{Bilder/empirische_verteilungsfunktion.png}
 
 \end{document}
